2010-09-10  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/torque.c :
	  Error in pbs_disconnect() shouldn't be fatal.

	* src/modules/torque.c :
	  Fix segfault with no default PBS server.

	* src/modules/torque.c :
	  Minor fixup of some error messages in Torque module.

	* : Re-run ./bootstrap

	* config/ac_torque.m4, configure.ac, doc/pdsh.1.in,
	  pdsh.spec, src/modules/Makefile.am, src/modules/torque.c :
	  Add new Torque/PBS module from Mattias Slabanja.

2010-09-03  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.22.

	* src/pdsh/mod.c :
	  Print an error if requested modules fail to initialize.

	* src/pdsh/mod.c :
	  Delete any uninitialized modules after all modules that can
	  successfully be initialized have been.

	* src/pdsh/mod.c :
	  Sort loaded modules first by priority, then by module name.
	  This will allow modules to be listed and initialized in
	  a reproducible order, instead of an arbitrary order.

	* src/pdsh/opt.c :
	  Move POSIXLY_CORRECT=1 into opt_args_early().

	* src/pdsh/opt.c :
	  Fix error in opt_args() when -M is used.

	* src/pdsh/mod.c :
	  Ensure functions used by list_for_each always return 0
	  so that the list traversal isn't short-circuited by
	  recoverable errors.

	* src/modules/genders.c :
	  Don't let genders_file be NULL. Instead manually set
	  to "/etc/genders" for improved error message, and to
	  avoid segfault when printing error message.

2010-09-02  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.21.

	* doc/pdsh.1.in :
	  Document PDSH_GENDERS_DIR and PDSH_GENDERS_FILE.

	* src/common/xstring.c :
	  Handle errors from XSI-compliant version of strerror_r()
	  in xstrerrorcat() implementation.

2010-09-01  Mark Grondona <mgrondona@llnl.gov>

	* README.modules, doc/pdcp.1.in, doc/pdsh.1.in :
	  Update documentation: adding -M and PDSH_MISC_MODULES.

	* src/pdsh/opt.c :
	  Add new option -M to allow named misc modules to be
	  pre-initialized before others, thus overriding which